@@ -1,3 +1,6 @@
+1 May 2013: Wouter
+	- Let system dealloc feed and feed_lock on OSX and Linux/BSD.
+
 22 April 2013: Wouter
 	- Fixup OSX backquote backslashes.  Removed wrong OSX version from
 	  its installer text.
